add: resolved becomes healthy

--- a/EDR/EDR.cfg
+++ b/EDR/EDR.cfg
@@ -3,9 +3,9 @@
 \* in the specification file. Comment INIT / NEXT parameters if you use SPECIFICATION.
 
 CONSTANTS
-ConstMarketplaces = {"m1", "m2", "m3"}
+ConstMarketplaces = {"m1", "m2"}
 \* ConstcGPUs = ["m1" |-> {"g1", "g2"}, "m2" |-> {"g3", "g4"}]
-ConstcGPUs = {"g1", "g2"}
+ConstcGPUs = {"g1", "g2", "g3", "g4"}
 SPECIFICATION  Spec
 \* INIT Init
 \* NEXT Next
