--- a/EDR/EDR.cfg
+++ b/EDR/EDR.cfg
@@ -1,12 +1,19 @@
-SPECIFICATION Spec
+\* SPECIFICATION
+\* Uncomment the previous line and provide the specification name if it's declared
+\* in the specification file. Comment INIT / NEXT parameters if you use SPECIFICATION.
 
 CONSTANTS
-    ConstMarketplaces = {"Market1", "Market2"}
-    ConstHosts = {"HostA", "HostB", "HostC"}
-    ConstcGPUs = {"GPU1", "GPU2", "GPU3", "GPU4"}
+ConstMarketplaces = {"m1", "m2"}
+\* ConstcGPUs = ["m1" |-> {"g1", "g2"}, "m2" |-> {"g3", "g4"}]
+ConstcGPUs = {"g1", "g2"}
+SPECIFICATION  Spec
+\* INIT Init
+\* NEXT Next
+PROPERTY  SafeTransitions
+PROPERTY Liveness
+\* PROPERTY
+\* Uncomment the previous line and add property names
 
-INVARIANTS
-    TypeInvariant
-
-PROPERTIES
-    SafeTransitions
+\* INVARIANT
+\* Uncomment the previous line and add invariant names
+CHECK_DEADLOCK FALSE
