--- a/EDRV2/EDRV2.cfg
+++ b/EDRV2/EDRV2.cfg
@@ -1,13 +1,17 @@
 CONSTANTS
-  GPUs = {"g1", "g2"}
+  GPUs = {"g1", "g2" }
   Marketplaces = {"m1", "m2"}
+  MaxConcurrentJobs = 2
 
 SPECIFICATION Spec
 
 INVARIANTS
   TypeInvariant
-  
+  ResourceConstraintInv
+
 PROPERTIES
   SafeTransitions
   ErrorEventuallyResolved
   EscalatedEventuallyResolved
+  NoJobStarvation
+  ResourceConstraint
