updated: job orchestration abstracted, huge state space

--- a/EDRV2/EDRV2.cfg
+++ b/EDRV2/EDRV2.cfg
@@ -1,5 +1,5 @@
 CONSTANTS
-  GPUs = {"g1", "g2" }
+  GPUs = {"g1", "g2", "g3", "g4"}
   Marketplaces = {"m1", "m2"}
   MaxConcurrentJobs = 2
 
@@ -14,4 +14,7 @@ PROPERTIES
   ErrorEventuallyResolved
   EscalatedEventuallyResolved
   NoJobStarvation
-  ResourceConstraint
+
+\* --- BOUND CONSTRAINTS TO LIMIT STATE-SPACE ---
+CONSTRAINT JobResultsBound
+CONSTRAINT WaitingJobsBound
