--- a/TCommit/TCommit.cfg
+++ b/TCommit/TCommit.cfg
@@ -3,13 +3,16 @@
 \* in the specification file. Comment INIT / NEXT parameters if you use SPECIFICATION.
 
 CONSTANTS
-    greeting = "Hello"
+RM = {"rm1", "rm2", "rm3"}
 
-INIT Init
-NEXT Next
+INIT TCInit
+NEXT TCNext
 
 \* PROPERTY
 \* Uncomment the previous line and add property names
 
-\* INVARIANT
+INVARIANT
+    TCTypeOK
+    TCConsistent
 \* Uncomment the previous line and add invariant names
+CHECK_DEADLOCK FALSE
