added invaraint from TCCOnsistant

--- a/TCommit/TwoPhase.cfg
+++ b/TCommit/TwoPhase.cfg
@@ -6,8 +6,8 @@ NEXT TPNext
 
 \* PROPERTY
 \* Uncomment the previous line and add property names
-
 INVARIANT
     TPTypeOK
+    TCConsistent
 \* Uncomment the previous line and add invariant names
 SYMMETRY RMSymmetry
